fix display on small screen

--- a/style.css
+++ b/style.css
@@ -620,6 +620,9 @@ footer a:hover {
 
 
 @media screen and (max-width: 700px) {
+    body {
+        overflow-y: auto;
+    }
     main {
         display: grid;
         grid-template-columns: 1fr;
